corrected social media links

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@ description: >-
   bleiben.
 baseurl: "/"
 url: "https://coderdojo-schoeneweide.github.io"
-twitter_username: CoderDojo-Schoeneweide
+facebook_username:  coderdojo.schoneweide.5
+instagram_username:  coderdojoschoneweide
 github_username:  CoderDojo-Schoeneweide
 show_excerpts: true
 
