Added team image for Anton

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2,7 +2,7 @@
   interests: Machine Learning, Mobile Applications, Functional Programming
   background: Studiert Angewandte Informatik im Master
   tasks:
-  imagePath:
+  imagePath: anton.png
 
 - name: Linda
   interests: Webentwicklung, Data Science, Scratch
