Added team image for Sebastian

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -38,7 +38,7 @@
   interests: Von allem ein Bisschen und ein bisschen mehr Autos und Technik. Vor allem aber Spaß am Umgang damit.
   background: Nfz Mechatroniker (also die ganz schweren Autos), studiert jetzt Fahrzeugtechnik im Bachelor und probiert gerne alles aus
   tasks: Mädchen für Alles
-  imagePath:
+  imagePath: sebastian.jpg
 
 - name: Yana
   interests: Android Development, Lesen
