Added team photo for Magdalena

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -26,7 +26,7 @@
   interests: Webentwicklung, Webdesign, Graphic Design
   background: Studiert Medieninformatik im Bachelor
   tasks: Logo Design, Social Media, Blog Posts
-  imagePath:
+  imagePath: magdalena.jpg
 
 - name: Patrick
   interests: Ethical Hacking, Software Development, Skateboard, Fußball
