Added team photo for Mirijam

--- a/_data/team.yml
+++ b/_data/team.yml
@@ -50,4 +50,4 @@
   interests: Schnuppern in verschiedenen Bereichen, z.B Web-Entwicklung und Softwareentwicklung
   background: Medieninformatik im 1. Bachelor Semester
   tasks:
-  imagePath:
+  imagePath: mirijam.jpg
